2apl/resources/tests/Bad/Module Not Found/parent.2apl
BeliefUpdates:  
  { true }  Remember(X) { k(X) } 
  
Beliefs:
  me(parent).
          
Plans:        
     create(child, child);
	   nonexistent.execute(B(done));
	   nonexistent.updateBB(newbelief(x));
	   release(child)
          
          
          
          